[DS-707] Don't create unneeded boxed primitives.  Accumulate strings efficiently.  Don't use new String(String expression).
git-svn-id: http://scm.dspace.org/svn/repo/dspace/trunk@5494 9c30dcfa-912a-0410-8fc2-9e0234be79fd